--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -4,9 +4,15 @@
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
 */
+body {@font-face {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/oswald/v31/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUhiZTaR.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }}
 
-
-nav {font-family: sans-serif; font-size: 10px;}
+nav {font-family: sans-serif;font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
 
 /* 
@@ -16,6 +22,14 @@ nav {font-family: sans-serif; font-size: 10px;}
         - use a lighter weight font
 */
 
+h1 {@font-face {
+    font-family: 'Bungee Inline';
+    font-style: normal;
+    font-weight: lighter;
+    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGt_-WEg.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+    font-size:  46px;} 
 
 #menu {columns: 420px 2; column-gap: 60px;}
 section {margin-bottom: 20px; padding: 10px;}
@@ -27,7 +41,7 @@ h2 {margin-top: 0;}
         - Show each of the section headings of the menu in uppercase
 */
 
-
+h2 {text-transform: uppercase;}
 /* 
      Update the following ruleset (dt) to accomplish the following:
         - Make the name of each menu item appear in bold 
@@ -35,6 +49,9 @@ h2 {margin-top: 0;}
 */
 dt {
     display: inline;
+    font-weight: bold;
+    font-size: 16px;
+
 }
 
 /* 
@@ -54,11 +71,12 @@ dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
     - right align the text in the footer
 */
 
-
+footer {text-align: right;}
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
-
+.starters {border: black 2px;}
+.desserts {border: black 2px;}
 
