--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -5,13 +5,10 @@
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
-body {@font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 400;
-      src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjxAwXjeu.woff2) format('woff2');
-      unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
-      background-image:url(map-bg.jpg)}
+body {font-family: "Lato"; 
+     font-size: 18px;
+     background-image: url("../images/map-bg.jpg");}
+     
 
 nav {font-family: sans-serif;font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
@@ -22,14 +19,11 @@ nav {font-family: sans-serif;font-size: 10px;}
         - set the font size to 45px 
         - set the font color to #5d4037
 */
-h1 {@font-face {
-    font-family: 'Supermercado One';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Supermercado One Regular'), local('SupermercadoOne-Regular'), url(https://fonts.gstatic.com/s/supermercadoone/v9/OpNXnpQWg8jc_xps_Gi14kVVEXOn20H9MQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-font: 45px #5d4037  ;}
+h1{ font-family: "Supermercado One"; 
+    font-size: 45px;
+    color: #5d4037;}
+
+
 /* 
     Update the following ruleset (#menu) to accomplish the following:
         - Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. 
@@ -37,7 +31,7 @@ font: 45px #5d4037  ;}
 #menu {
     columns: 400px 2;
     column-gap: 2px;
-    column-rule: dashed rosybrown;}
+    column-rule: 2px dashed rosybrown;}
 
 /*  
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
