--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -4,13 +4,9 @@
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
 */
-body {@font-face {
-    font-family: 'Oswald';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/oswald/v31/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUhiZTaR.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }}
+body {font-family: "Oswald";
+      font-size: 14px:}
+    
 
 nav {font-family: sans-serif;font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
@@ -22,14 +18,10 @@ nav {font-family: sans-serif;font-size: 10px;}
         - use a lighter weight font
 */
 
-h1 {@font-face {
-    font-family: 'Bungee Inline';
-    font-style: normal;
-    font-weight: lighter;
-    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGt_-WEg.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-    font-size:  46px;} 
+h1 {font-family: 'Bungee Inline';
+    font-size: 46px;
+    font-weight: lighter;}
+    
 
 #menu {columns: 420px 2; column-gap: 60px;}
 section {margin-bottom: 20px; padding: 10px;}
@@ -59,7 +51,7 @@ dt {
     - Make a comma appear after the name of each menu item
 */
 
-
+dt::after{ content: ","; }
 
 dd {display: inline; margin: 0;}
 dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
@@ -77,6 +69,6 @@ footer {text-align: right;}
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
-.starters {border: black 2px;}
-.desserts {border: black 2px;}
+.starters {border: solid black 2px;}
+.desserts {border: solid black 2px;}
 
